--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
   </head>
 
   <body>
-    <canvas id="canvas"></canvas>
+    <p>
+      <h1 id="title">Score: 0</h1>
+      up: &uarr;&nbsp;&nbsp;
+      right: &rarr;&nbsp;&nbsp;
+      down: &darr;&nbsp;&nbsp;
+      left: &larr;&nbsp;&nbsp;
+      <button onclick="init()">Start Game</button>
+  </p>
+    <canvas id="canvas">Game</canvas>
     <script src="index.js"></script>
   </body>
 </html>
